--- a/aemain-v1/templates/aemain-firewall.jinja
+++ b/aemain-v1/templates/aemain-firewall.jinja
@@ -101,6 +101,11 @@ resources:
   properties:
     allowed:
     - IPProtocol: tcp
+      ports:
+      - '22'
+      - '80'
+      - '443'
+      - '9418'
     description: ''
     direction: INGRESS
     disabled: false
